# mezo-dbt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config_local.yaml  .pre-commit-hooks.yaml  .sqlfluff  .sqlfluff_dev  .sqlfluffignore  .user.yml  Dockerfile  README.md  catalog.json  dbt_project.yml  main.py  manifest.json  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  script.sh
.github/: prod-ci.yml
.github/workflows/: deploy-cloudrun.yml  prod-cd.yml  prod-ci-teardown.yml  prod-ci.yml
macros/: add_id_graph_goldsky.sql  currency_conversions.sql  drop_pr_staging_schemas.sql  loan_categorization.sql  market_mapping.sql  url_parsing.sql
models/00_sources/: coin_gecko.yml  cost_import_sheet.yml  goldsky.yml  segment.yml
models/10_staging/: stg_goldsky_borrower_operations_mezo__trove_updated.sql  stg_goldsky_borrower_operations_mezo__trove_updated.yml  stg_goldsky_market_mezo__donated.sql  stg_goldsky_market_mezo__donated.yml  stg_goldsky_market_mezo__order_placed.sql  stg_goldsky_market_mezo__order_placed.yml  stg_goldsky_mezo_bridge_mainnet__assets_locked.sql  stg_goldsky_mezo_bridge_mainnet__assets_locked.yml  stg_goldsky_mezo_vaults_mezo__transfer.sql  stg_goldsky_musd_trove_manager__liquidation.sql  stg_goldsky_musd_trove_manager__liquidation.yml  stg_goldsky_musd_trove_manager__trove_liquidated.sql  (+7 more)
scripts/: raw_goldsky_musd_trove_manager__liquidation.sql  raw_goldsky_musd_trove_manager__trove_liquidated.sql  wif.md
seeds/: musd_market_map.csv  musd_market_map.yml  referrer_mapping.csv  referrer_mapping.yml  token_map.csv  token_map.yml
(+141 files in other folders)
