[project]
name = "dbt-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery",
    "dbt-core",
]

[tool.uv.sources]
dbt-bigquery = { git = "https://github.com/dbt-labs/dbt-adapters.git", subdirectory = "dbt-bigquery", rev = "main" }
