[project]
name = "dbt-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.10.0",
    "dbt-core>=1.10.4",
    "pre-commit>=4.2.0",
    "rpds-py>=0.26.0",
    "shandy-sqlfmt[jinjafmt]>=0.26.0",
]

[dependency-groups]
dev = [
    "dbt-osmosis>=0.12.10",
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
]
